--- a/preamble.tex
+++ b/preamble.tex
@@ -33,5 +33,6 @@
 \deffootnote[1.8em]{0em}{0em}{\textsuperscript{\thefootnote}}
 
 \newcommand{\N}{\mathbb{N}}
+\newcommand{\R}{\mathbb{R}}
 
 \usepackage{subfiles}
