Problem Set 1 (Questions)

--- a/Notes/Week1/week1.tex
+++ b/Notes/Week1/week1.tex
@@ -149,7 +149,7 @@
     \end{itemize}
     \item We want to fix the center of the cube at the origin. Thus, a symmetry can be a linear map $M:\R^3\to\R^3$.
     \begin{itemize}
-        \item We want it to preserve angles, i.e., orthogonality. Thus, we should assert $MM^\intercal=I$.
+        \item We want it to preserve angles, i.e., orthogonality. Thus, we should assert $MM^T=I$.
         \item We also want it to preserve orientation. Then we should have $\det(M)=1$.
     \end{itemize}
     \item \textbf{Cu}: The cube group.
