--- a/preamble.tex
+++ b/preamble.tex
@@ -7,7 +7,7 @@
 \usepackage{siunitx}
 \usepackage{tikz}
 \usepackage{amsmath,amssymb}
-\usepackage{bm}
+\usepackage{bm,physics}
 \usepackage[hidelinks]{hyperref}
 
 \fancypagestyle{main}{
@@ -34,5 +34,7 @@
 
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\R}{\mathbb{R}}
+
+\newcommand{\inp}[2]{\left\langle{#1},{#2}\right\rangle}
 
 \usepackage{subfiles}
